apps/manifests/argocd/overlays/nonprod/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"    
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # external-dns.alpha.kubernetes.io/hostname: argocd.nonprod.intreeapp.xyz              
    ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
    # host: argocd.nonprod.intreeapp.xyz
  # tls:
  # - hosts:
  #   - argocd.nonprod.intreeapp.xyz
  #   secretName: argocd-server-tls
